--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,8 @@ dependencies {
 
     //A simple charting library for Android, supporting line-, bar-, scatter-, candlestick- and piecharts,
     // as well as scaling, dragging, selecting and animations. Supporting Android 2.2 (API level 8) and upwards.
-    compile 'org.quanqi:mpandroidchart:1.7.5'
+    //compile 'org.quanqi:mpandroidchart:1.7.5'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.0.8'
 
     //The MaterialDrawer library aims to provide the easiest possible implementation of a navigation drawer
     compile('com.mikepenz.materialdrawer:library:2.5.5@aar') {
