--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        //maven {url "https://jitpack.io" }
+        maven {url "https://jitpack.io" }
 
         jcenter()
     }
