- checkin graph updated

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Mar 28 13:14:15 CET 2015
-sdk.dir=D\:\\AndroidSDK
+sdk.dir=D\:\\AndroidSDK\\sdk
