--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 28 13:14:15 CET 2015
-sdk.dir=D\:\\AndroidSDK\\sdk
+#Sat Apr 04 13:57:10 CEST 2015
+sdk.dir=D\:\\AndroidSDK
