--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,7 +176,7 @@
         </service>
 
         <activity
-            android:name=".ui.MainActivityDrawerPenz"
+            android:name=".ui.MainActivityOld"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true"
             android:label="@string/title_check_in_flow"
