--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_doctor"
+        android:icon="@drawable/ic_smapp_launcher_portrait_512"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         >
