--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 04 13:57:10 CEST 2015
-sdk.dir=D\:\\AndroidSDK
+#Tue Apr 07 10:00:15 CEST 2015
+sdk.dir=D\:\\AndroidSdk\\sdk
